--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
   "compilerOptions": {
     /* Project Options */
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "jsx": "react-native",
     "outDir": "./build",
     "rootDir": "./src",
