feat: Add dummy data for each models

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     ],
     "jsx": "react-native",
     "outDir": "./build",
-    "rootDir": "./src",
+    "rootDirs": [
+      "./src",
+      "./data"
+    ],
 
     /* Module Options */
     "moduleResolution": "node",
