--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.12.8",
+    "@types/react-native-table-component": "^1.2.0",
     "expo": "^39.0.5",
     "expo-asset": "~8.2.0",
     "expo-constants": "~9.2.0",
